tests/expectations/parser-library/struct_bad_items_fail.out
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test_0:1:1
     |
   1 | record Foo { owner: address, data: u32 }
     | ^^^^^^
